Bug 1250773. Ignore viewBoxes with negative width/height. r=heycam

MozReview-Commit-ID: Be5fxaDz85w

--HG--
extra : rebase_source : 10ebb9d0dd466be36888aa0f6593fb547020e28f